# Bi_LSTM_CNN_GLD_predictor

./: .gitignore  BSP3.code-workspace  Constants.py  dataset_former.py  dataset_former2.py  gold_model_latest.pth  gold_predictions.csv  launch.sh  market_dataset.pt  pom.xml  readme.md  run.bat  test.py  train_model.py  utils.py
News/: finBERT_process.py
News/historical/: fetch_summaries.py
News/historical/csvs-url/: 2015-2016.csv  2016-2017.csv  2020-2021.csv  2023-2024.csv  2024-2025.csv
archive_to_delete/older/: CryptoHistDataDownloader.java  CryptoHistDataDownloader.py
config/: app_config.yaml  tickers.json  train_config.yaml
hist_data/: fetch_data.py
hist_data/stock_data/: GLD.csv
java_brain/: dependency-reduced-pom.xml  pom.xml
minmax/: dataframe.parquet  raw_OHLCV.parquet  tensors.pt
other/: fetch_summaries.py  readme.md
other/utils/: Constants.py  utils.py
python/: requirements.txt
python/training/: dataset_former.py  train_model.py
python_engine/: pyproject.toml
python_engine/src/gui_backend/: inference_interface.py  java_interface.py  java_listener.py  train_interface.py
python_engine/src/python_engine/fetch_data/News/: finBERT_process.py  yahoo_fetch.py
python_engine/src/python_engine/fetch_data/News/historical/csvs-url/: 2017-2018.csv
python_engine/src/python_engine/fetch_data/News/near_live/: gdelt_doc_fetch.py  yahoo_fetch.py
python_engine/src/python_engine/fetch_data/stock/: fetch_data.py
python_engine/src/python_engine/inference/: inference.py
python_engine/src/python_engine/training/: Constants.py  analysis.py  dataset_former.py  models.py  train_model.py
python_engine/src/python_engine/training/results/20260108-183223 -arch es fr/: gold_model_latest.pth
python_engine/src/python_engine/training/results/20260108-185033 - arch fr/: gold_predictions.csv
python_engine/src/python_engine/training/test/: manage.py  settings.py
python_engine/src/utils/: MetaConstants.py  data_management.py  logger.py  paths.py
results/20260108-183625 - arch2 fr/: gold_predictions.csv
results/20260108-200345 -arch es/: gold_predictions.csv
results/20260108-202341 -archA es/: gold_model_latest.pth  gold_predictions.csv
results/20260108-204115 -arch2/: gold_predictions.csv
results/20260108-213155 -arch/: gold_model_latest.pth  gold_predictions.csv
results/20260108-213818 -archA/: gold_model_latest.pth  gold_predictions.csv
saved_dataset/: dataframe.parquet  raw_OHLCV.parquet  tensors.pt
test/: dataloader.py  loss.py  manage.py  model.py  trainer.py  utils.py
(+59 files in other folders)
