[project]
name = "python-engine"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
authors = [
    { name = "Erikas", email = "erikonis555@gmail.com" }
]
requires-python = ">=3.13"
dependencies = [
    "backports-zstd==1.3.0",
    "beautifulsoup4==4.14.3",
    "blinker==1.9.0",
    "brotli==1.2.0",
    "certifi==2026.1.4",
    "charset-normalizer==3.4.4",
    "choreographer==1.2.1",
    "click==8.3.1",
    "colorama==0.4.6",
    "contourpy==1.3.3",
    "cramjam==2.11.0",
    "cycler==0.12.1",
    "dash==2.18.2",
    "dash-bootstrap-components==1.7.1",
    "dash-core-components==2.0.0",
    "dash-daq==0.5.0",
    "dash-html-components==2.0.0",
    "dash-table==5.0.0",
    "dtale==3.18.2",
    "et-xmlfile==2.0.0",
    "fastparquet==2025.12.0",
    "filelock==3.20.3",
    "flask==3.0.3",
    "flask-compress==1.23",
    "fonttools==4.61.1",
    "fsspec==2026.1.0",
    "future==1.0.0",
    "idna==3.11",
    "importlib-metadata==8.7.1",
    "iniconfig==2.3.0",
    "itsdangerous==2.2.0",
    "jinja2==3.1.6",
    "joblib==1.5.3",
    "kaleido==1.2.0",
    "kiwisolver==1.4.9",
    "llvmlite==0.44.0",
    "logistro==2.0.1",
    "lz4==4.4.5",
    "markupsafe==3.0.3",
    "matplotlib==3.10.8",
    "missingno==0.5.2",
    "mpmath==1.3.0",
    "narwhals==2.15.0",
    "nest-asyncio==1.6.0",
    "networkx==3.6.1",
    "numba==0.61.2",
    "numpy==2.2.6",
    "openpyxl==3.1.5",
    "orjson==3.11.5",
    "overrides==7.7.0",
    "packaging==25.0",
    "pandas==2.3.3",
    "pandas-ta==0.4.71b0",
    "patsy==1.0.2",
    "pillow==12.1.0",
    "pkginfo==1.12.1.2",
    "plotly==6.5.1",
    "pluggy==1.6.0",
    "pygments==2.19.2",
    "pyparsing==3.3.1",
    "pytest==9.0.2",
    "pytest-timeout==2.4.0",
    "python-dateutil==2.9.0.post0",
    "pytz==2025.2",
    "requests==2.32.5",
    "retrying==1.4.2",
    "scikit-learn==1.8.0",
    "scipy==1.15.3",
    "seaborn==0.13.2",
    "setuptools==80.9.0",
    "simplejson==3.20.2",
    "six==1.17.0",
    "soupsieve==2.8.1",
    "squarify==0.4.4",
    "statsmodels==0.14.6",
    "strsimpy==0.2.1",
    "sympy==1.14.0",
    "threadpoolctl==3.6.0",
    "torch==2.9.1",
    "torchsummary==1.5.1",
    "tqdm==4.67.1",
    "typing-extensions==4.15.0",
    "tzdata==2025.3",
    "urllib3==2.6.3",
    "werkzeug==3.0.6",
    "xarray==2025.12.0",
    "xlrd==2.0.2",
    "zipp==3.23.0",
]

[build-system]
requires = ["uv_build>=0.9.24,<0.10.0"]
build-backend = "uv_build"
